--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: JLabNotes                    # the main title
 tagline: Jira Administration Notebook   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal and useful notes about Jira Administration.
+  A minimal but useful public notes about Jira Administration.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'htps://jlabnotes.github.io'
@@ -144,7 +144,7 @@ defaults:
       type: posts
     values:
       layout: post
-      comments: true    # Enable comments in posts.
+      comments: false    # Enable comments in posts.
       toc: true         # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
