--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://avatars.githubusercontent.com/u/96552701?v=4
+avatar: /assets/img/avatar/jlab-logo.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
